<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/FractalView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/z2_mandelbrot_bone" />

    <Button
        android:id="@+id/buttonRandomParam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRandomParam"
        android:layout_alignTop="@+id/FractalView1"
        android:layout_alignLeft="@+id/FractalView1"/>

    <Button
        android:id="@+id/buttonPickParam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonPickParam"
        android:layout_below="@+id/buttonRandomParam"
        android:layout_alignRight="@+id/buttonGood"/>

    <Button
        android:id="@+id/buttonBad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonBad"
        android:layout_alignBottom="@+id/buttonChangeColorMap"
        android:layout_toLeftOf="@+id/buttonChangeColorMap"/>

    <Button
        android:id="@+id/buttonChangeColorMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonChangeColorMap"
        android:layout_above="@+id/currentParam"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonGood"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGood"
        android:layout_alignBottom="@+id/buttonChangeColorMap"
        android:layout_toRightOf="@+id/buttonChangeColorMap"/>

    <TextView
        android:id="@+id/currentParam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currentParam"
        android:layout_alignBottom="@+id/FractalView1"
        android:layout_alignLeft="@+id/FractalView1"/>

</RelativeLayout>
